Custom exceptions in service and no more ResponseStatus
 Integration tests for DeckController